# 6502_Emulator

./: README.md
6502/: CMakeLists.txt
6502/6502Lib/: CMakeLists.txt
6502/6502Lib/src/private/: main_6502.cpp
6502/6502Lib/src/public/: main_6502.h
6502/6502Test/: CMakeLists.txt
6502/6502Test/src/: test_6502.cpp
